--- a/past/index.html
+++ b/past/index.html
@@ -122,6 +122,44 @@
 <article class="row format-standard">
 
     
+<h3><a id="24"></a>Talks in 2024</h3>
+
+    <p>
+        Nov 22, '24 (Colloquium, Friday, 4:30–5:30 pm, M1001), 
+        <b>Hongwei Lin</b> (Zhejiang University), 
+        <a onclick="toggle_visibility('24-1');"><i>Computer-Aided Topological Design&mdash;applications of computational topology in geometric design and processing</i></a><br />
+        <div id="24-1" class="toshow" style="display:none">
+            Computational topology is an emerging discipline developed since around 2000.  It studies the determination and modeling of topological problems in computer 
+            applications, as well as the design of algorithms for topological problems.  As a subject to apply computational topology to the field of data processing, 
+            topological data analysis has been developed.  It has been widely used in biomedicine, drug design, financial analysis, machine learning, and other fields.  
+            The main tools in computational topology and topological data analysis are persistent homology and Mapper.  Persistent homology constructs a sequence of 
+            gradually "growing" simplicial complexes in a metric space, computes the persisting homological features (generators in the persistent homology groups), and 
+            infers the importance of the features based on the life span of these homological features, thereby enabling the inference and extraction of global topological 
+            features of the discrete data set.  On the other hand, Mapper extracts the main topological structure of the data set by defining a reference mapping on the 
+            data set and using data segmentation and clustering.  Since almost 10 years ago, the CAGD research group of Zhejiang University has applied computational 
+            topology methods to geometric design and geometric processing, and developed a series of computer-aided topological design methods.  This talk will introduce a 
+            series of work in this area, including curve and surface reconstruction technology based on topological understanding, and topological control methods in 
+            implicit curve and surface reconstruction.  Furthermore, persistent homology has been applied to the field of porous structure processing, and a variety of 
+            topological descriptors have been designed for porous structure retrieval and classification; porous structure generation technology that ensures connectivity 
+            has been developed; porous thickness computation technology that preserves topological structure and porous model slicing method have been proposed in 3D 
+            printing of porous structures.  
+        </div>
+    </p>
+
+    <p>
+        Nov 27, '24 (Wednesday, 3:00–4:00 pm, Taizhou Hall 240A), 
+        <b>Zhouli Xu</b> (University of California, Los Angeles), 
+        <a onclick="toggle_visibility('24-2');"><i>Homotopy groups of spheres</i></a><br />
+        <div id="24-2" class="toshow" style="display:none">
+            Up to continuous deformations, all based continuous maps between two spheres form an abelian group, and is called a homotopy group of the target sphere.  It 
+            turns out that determination of these groups is a very hard problem in topology.  The structures of the homotopy groups of spheres are closely related to many 
+            topics in topology, such as the Hopf invariant problem, the Kervaire invariant problem, and the number of smooth structures on a given sphere.  
+            <br />
+            In this talk, I will review some classical methods of computing these groups, and discuss some recent progress.  
+        </div>
+    </p>
+
+
 <h3><a id="23"></a>Talks in 2023</h3>
 
     <p>
@@ -538,7 +576,7 @@
             <div class="row">
                 <div class="col-full">
                     <div class="s-footer__copyright">
-                        <span>© Copyright Philosophy 2024</span> 
+                        <span>© Copyright Philosophy 2025</span> 
                         <span>Site Template by <a href="https://colorlib.com/">Colorlib</a></span>
                         <span>Picture from Zhouli Xu</span>
                     </div>
