--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 <!--
     <p>
-        MMM DD, '23, 
+        MMM DD, '25, 
         <b>Speaker</b> (Affiliation), 
         <a onclick="toggle_visibility('23-1');"><i>Title</i></a><br />
         <div id="23-1" class="toshow" style="display:none">
@@ -158,39 +158,30 @@
 -->
 
     <p>
-        Nov 22, '24 (Colloquium, Friday, 4:30–5:30 pm, M1001), 
-        <b>Hongwei Lin</b> (Zhejiang University), 
-        <a onclick="toggle_visibility('24-1');"><i>Computer-Aided Topological Design&mdash;applications of computational topology in geometric design and processing</i></a><br />
-        <div id="24-1" class="toshow" style="display:none">
-            Computational topology is an emerging discipline developed since around 2000.  It studies the determination and modeling of topological problems in computer 
-            applications, as well as the design of algorithms for topological problems.  As a subject to apply computational topology to the field of data processing, 
-            topological data analysis has been developed.  It has been widely used in biomedicine, drug design, financial analysis, machine learning, and other fields.  
-            The main tools in computational topology and topological data analysis are persistent homology and Mapper.  Persistent homology constructs a sequence of 
-            gradually "growing" simplicial complexes in a metric space, computes the persisting homological features (generators in the persistent homology groups), and 
-            infers the importance of the features based on the life span of these homological features, thereby enabling the inference and extraction of global topological 
-            features of the discrete data set.  On the other hand, Mapper extracts the main topological structure of the data set by defining a reference mapping on the 
-            data set and using data segmentation and clustering.  Since almost 10 years ago, the CAGD research group of Zhejiang University has applied computational 
-            topology methods to geometric design and geometric processing, and developed a series of computer-aided topological design methods.  This talk will introduce a 
-            series of work in this area, including curve and surface reconstruction technology based on topological understanding, and topological control methods in 
-            implicit curve and surface reconstruction.  Furthermore, persistent homology has been applied to the field of porous structure processing, and a variety of 
-            topological descriptors have been designed for porous structure retrieval and classification; porous structure generation technology that ensures connectivity 
-            has been developed; porous thickness computation technology that preserves topological structure and porous model slicing method have been proposed in 3D 
-            printing of porous structures.  
+        Mar 14, '24 (Colloquium, Friday, 4:30–5:30 pm, M1001), 
+        <b>Peter May</b> (University of Chicago), 
+        <a onclick="toggle_visibility('25-1');"><i>Finite sets, symmetric groups, and categorical combinatorics</i></a><br />
+        <div id="23-1" class="toshow" style="display:none">
+            Equivariant multiplicative infinite loop space theory is interesting, but hard.  I will describe definitions in terms of symmetric groups which promise to give an 
+            easy new way to build the theory.  As I shall describe, the main obstruction to making the new theory rigorous is the elementary categorical combinatorics of 
+            symmetric groups.  
         </div>
     </p>
 
     <p>
-        Nov 27, '24 (Wednesday, 3:00–4:00 pm, Taizhou Hall 240A), 
-        <b>Zhouli Xu</b> (University of California, Los Angeles), 
-        <a onclick="toggle_visibility('24-2');"><i>Homotopy groups of spheres</i></a><br />
-        <div id="24-2" class="toshow" style="display:none">
-            Up to continuous deformations, all based continuous maps between two spheres form an abelian group, and is called a homotopy group of the target sphere.  It 
-            turns out that determination of these groups is a very hard problem in topology.  The structures of the homotopy groups of spheres are closely related to many 
-            topics in topology, such as the Hopf invariant problem, the Kervaire invariant problem, and the number of smooth structures on a given sphere.  
-            <br />
-            In this talk, I will review some classical methods of computing these groups, and discuss some recent progress.  
+        Mar 21, '24 (Friday, 4:30–5:30 pm, M5024), 
+        <b>David White</b> (Denison University), 
+        <a onclick="toggle_visibility('25-2');"><i>Spatiotemporal statistics, TDA, and drug overdose</i></a><br />
+        <div id="23-1" class="toshow" style="display:none">
+            I will give an overview of time series data (that is, data sampled at different points in time) and spatially autocorrelated data (e.g., home prices, where the 
+            price of the house next to yours contains information about the likely price of your house).  I'll then discuss the most common statistical models for such data, 
+            including ARIMA models that factor in what the past knows about the present, spectral models based on Fourier analysis, spatially weighted models, and the general 
+            linear mixed model for data with both spatial and temporal autocorrelation.  I'll illustrate these models with vignettes from my research, on problems related to 
+            drug overdose and to the policing of protests in the USA.  If there is time, I will explain some new research applying topological data analysis (TDA) to model 
+            the spatiotemporal spread of overdoses.  
         </div>
     </p>
+
 
 <br /><br /><br />
 <p></p>
@@ -207,7 +198,7 @@
             <div class="row">
                 <div class="col-full">
                     <div class="s-footer__copyright">
-                        <span>© Copyright Philosophy 2024</span> 
+                        <span>© Copyright Philosophy 2025</span> 
                         <span>Site Template by <a href="https://colorlib.com/" target="_blank">Colorlib</a></span>
                         <span>Cover Picture from Zhouli Xu</span>
                     </div>
