--- a/past/index.html
+++ b/past/index.html
@@ -63,6 +63,7 @@
 
                     <ul class="header__nav">
                         <li><a href="/" target="_blank">Home</a></li>
+                        <li><a href="#24">2024</a></li>
                         <li><a href="#23">2023</a></li>
                         <li><a href="#22">2022</a></li>
                         <li><a href="#21">2021</a></li>
