--- a/grad/index.html
+++ b/grad/index.html
@@ -178,10 +178,10 @@
 
     <p>
         Mar 7, '25 (13:00-14:00, M1001), 
-        <b>Zhonglin Wu (Fudan University)</b>, 
+        <b>Zhonglin Wu</b> (Fudan University), 
         <a onclick="toggle_visibility('39');">
         <i>  On "A Synthetic Approach to Detecting $v1$ Periodic Families" </i></a><br />
-        <div id="37" class="toshow" style="display:none">
+        <div id="39" class="toshow" style="display:none">
             Synthetic spectral sequence is a newly discovered and highly effective tool for computing stable homotopy groups. In this talk, I will introduce the work of Christian Carrick 
             and Jack Morgan Davis in their paper "A Synthetic Approach to Detecting $v1$ Periodic Families." and show how synthetic spectral sequences can be used to perform calculations 
             that are challenging with traditional methods, such as the homotopy groups of $j$ spectrum.
