--- a/grad/index.html
+++ b/grad/index.html
@@ -206,7 +206,22 @@
             </li>
            </div>
     </p>
-    
+
+
+    <p>
+        Apr 18, '25
+        <b> Yifan Wu</b>
+        <a onclick="toggle_visibility('41');">
+        <i>  TBA </i></a><br />
+    </p>
+
+
+     <p>
+        Apr 25, '25
+        <b> Zhou Fang</b>
+        <a onclick="toggle_visibility('42');">
+        <i>  TBA </i></a><br />
+    </p>
     
 <h3>Talks in Fall 2024 (mostly Mondays 4:20 in M5024)</h3>
 
