--- a/grad/index.html
+++ b/grad/index.html
@@ -210,7 +210,7 @@
 
     <p>
         Apr 18, '25
-        <b> Yifan Wu</b>
+        <b> Yifan Wu</b>,
         <a onclick="toggle_visibility('41');">
         <i>  TBA </i></a><br />
     </p>
@@ -218,7 +218,7 @@
 
      <p>
         Apr 25, '25
-        <b> Zhou Fang</b>
+        <b> Zhou Fang</b>,
         <a onclick="toggle_visibility('42');">
         <i>  TBA </i></a><br />
     </p>
