--- a/grad/index.html
+++ b/grad/index.html
@@ -222,6 +222,13 @@
         <a onclick="toggle_visibility('42');">
         <i>  TBA </i></a><br />
     </p>
+
+    <p>
+        May 9, '25
+        <b> Qingrui Qu</b>,
+        <a onclick="toggle_visibility('43');">
+        <i>  TBA </i></a><br />
+    </p>
     
 <h3>Talks in Fall 2024 (mostly Mondays 4:20 in M5024)</h3>
 
