--- a/grad/index.html
+++ b/grad/index.html
@@ -210,15 +210,25 @@
 
     <p>
         Apr 18, '25
-        <b> Yifan Wu</b>,
+        <b> Zhou Fang</b>,
         <a onclick="toggle_visibility('41');">
-        <i>  TBA </i></a><br />
+        <i> Exploring $\infty$-Categories via Simplicial Sets </i></a><br />
+        <div id="41" class="toshow" style="display:none">
+            <li>
+             $\infty$-categories (infinity categories) have become a powerful and widely used framework in many areas of mathematics, 
+            such as in Lurie’s Higher Algebra. In this talk, I will introduce $\infty$-categories from the perspective of simplicial sets, 
+            and explore the relationships among simplicial sets, ordinary categories, $\infty$-categories, Kan complexes, and topological spaces.
+            The talk is based on Chapter 1 of the Kerodon’s online notes. Applications of $\infty$-categories will be discussed by Yifan Wu in the next seminar.   
+            </li>
+
+            <li> <a href="https://kerodon.net/tag/0000" target="_blank">Notes</a></li>
+        </div>
     </p>
 
 
      <p>
         Apr 25, '25
-        <b> Zhou Fang</b>,
+        <b> Yifan Wu</b>,
         <a onclick="toggle_visibility('42');">
         <i>  TBA </i></a><br />
     </p>
