--- a/grad/index.html
+++ b/grad/index.html
@@ -222,6 +222,7 @@
             </li>
 
             <li> <a href="https://kerodon.net/tag/0000" target="_blank">Notes</a></li>
+            <li> <a href="https://jozhoufang.github.io/file/inf_cat_4.18.pdf" target="_blank">Slides</a></li>
         </div>
     </p>
 
