--- a/grad/index.html
+++ b/grad/index.html
@@ -228,10 +228,10 @@
 
 
      <p>
-        Apr 25, '25
+        Apr 25, '25 , (Memorial Lecture on Jim Simons)
         <b> Pengxu Zhang </b>,
         <a onclick="toggle_visibility('42');">
-        <i>  Introduction to Differential Cohomology: From Chern-Simons invariant to invertible field theory (Memorial Lecture on Jim Simons)</i></a><br />
+        <i>  Introduction to Differential Cohomology: From Chern-Simons invariant to invertible field theory</i></a><br />
         <div id="42" class="toshow" style="display:none">      
         I will first review Chern's proof of generalized Gauss-Bonnet Theorem which is the precursor of Chern-Weil theory of characteristic classes. Then I will elaborate on the the 
          original construction of Chern-Simons invariant in this framework. The second part focuses on the differential cohomology where the generalized Chern-Simons invariants live. 
