--- a/grad/index.html
+++ b/grad/index.html
@@ -180,7 +180,7 @@
         Mar 7, '25 (13:00-14:00, M1001), 
         <b>Zhonglin Wu</b> (Fudan University), 
         <a onclick="toggle_visibility('39');">
-        <i>  On "A Synthetic Approach to Detecting $v_1$ Periodic Families" </i></a><br />
+        <i> On "A Synthetic Approach to Detecting $v_1$ Periodic Families" </i></a><br />
         <div id="39" class="toshow" style="display:none">
             Synthetic spectral sequence is a newly discovered and highly effective tool for computing stable homotopy groups. In this talk, I will introduce the work of Christian Carrick 
             and Jack Morgan Davis in their paper "A Synthetic Approach to Detecting $v_1$ Periodic Families." and show how synthetic spectral sequences can be used to perform calculations 
@@ -228,10 +228,10 @@
 
 
      <p>
-        Apr 25, '25 , (Memorial Lecture on Jim Simons)
+        Apr 25, '25  
         <b> Pengxu Zhang </b>,
         <a onclick="toggle_visibility('42');">
-        <i>  Introduction to Differential Cohomology: From Chern-Simons invariant to invertible field theory</i></a><br />
+        <i>  Introduction to Differential Cohomology: From Chern-Simons invariant to invertible field theory</i></a><br /> (Memorial Lecture on Jim Simons)
         <div id="42" class="toshow" style="display:none">      
         I will first review Chern's proof of generalized Gauss-Bonnet Theorem which is the precursor of Chern-Weil theory of characteristic classes. Then I will elaborate on the the 
          original construction of Chern-Simons invariant in this framework. The second part focuses on the differential cohomology where the generalized Chern-Simons invariants live. 
@@ -250,7 +250,7 @@
         <a onclick="toggle_visibility('43');">
         <i>Foundation of infinity categories  </i></a><br />
         <div id="43" class="toshow" style="display:none">      
-        We will disucuss topics in Kerodon's online notes ( <a href="https://kerodon.net/tag/0000" target="_blank">Kerodon</a>)  from chapter 1 to chapter 4, and illustrate 
+        We will disucuss topics in <a href="https://kerodon.net/tag/0000" target="_blank">Kerodon</a>'s online notes  from chapter 1 to chapter 4, and illustrate 
         ideas in infinity categories via some examples.
         </div>
           
