--- a/index.html
+++ b/index.html
@@ -182,6 +182,24 @@
         </div>
     </p>
 
+    <p>
+        May , '25 (TBD, M5024), 
+        <b>Hongwei Jia</b> (Tongji University), 
+        <a onclick="toggle_visibility('25-3');"><i>Topological physics</i></a><br />
+        <div id="25-2" class="toshow" style="display:none">
+            Topology, a cornerstone of modern mathematics, provides a universal framework for classifying defects in physical systems, e.g., nematic disclinations, 
+            spin/orbital angular momentum, and spatial vortices etc.  Its integration with band theory has revolutionized our understanding of momentum space as a parameter 
+            space, where band degeneracies (Dirac/Weyl points) are characterized by topological invariants constructed from Berry phase, exemplified by winding numbers and 
+            Chern classes.  The recent incorporation of algebraic topology tools, particularly homotopy and homology theories, has further enriched the classification of 
+            topological phases.  In this talk, we introduce the application of catastrophe theory–a distinct mathematical branch–in band theories.  Focusing on PT-symmetric 
+            non-Hermitian systems, we demonstrate that catastrophe singularities in the ADE classification (cuspoids, umbilics, etc.) universally manifest as symmetry 
+            protected band degeneracies, defining unprecedented topological phase classes.  Crucially, these catastrophe-engineered degeneracies host novel topological edge 
+            states that persist in gapless regimes, challenging the conventional bulk–boundary correspondence.  Our findings establish connections between catastrophe 
+            theory and topological matter.  This cross-disciplinary synthesis opens new avenues for topological physics and enriches the fundamental understanding of 
+            singularity-associated topological phenomena.  
+        </div>
+    </p>
+
 
 <br /><br /><br />
 <p></p>
