--- a/grad/index.html
+++ b/grad/index.html
@@ -85,6 +85,7 @@
                         <li><a  href="/index.html" title="" target="_blank">Home</a></li>
                         <li><a href="/acts" title="" target="_blank">Appl. Comput. Topol. Seminar</a></li>
                         <li><a href="/undergrad" title="" target="_blank">Undergraduate Seminar</a></li>
+                        <li><a href="#2024">2024</a></li>
                         <li><a href="#2023">2023</a></li>
                         <li><a href="#2022">2022</a></li>
                         <li><a href="#2021">2021</a></li>
@@ -263,7 +264,7 @@
         <i>  TBA </i></a><br />
     </p>
     
-<h3>Talks in Fall 2024 (mostly Mondays 4:20 in M5024)</h3>
+<h3><a id="2024"></a>Talks in Fall 2024 (mostly Mondays 4:20 in M5024)</h3>
 
     
     <p>
