--- a/grad/index.html
+++ b/grad/index.html
@@ -263,6 +263,14 @@
         <a onclick="toggle_visibility('44');">
         <i>  TBA </i></a><br />
     </p>
+
+    <p>
+        May 23, '25
+        <b> Zhou Fang</b>,
+        <a onclick="toggle_visibility('45');">
+        <i>  TBA </i></a><br />
+    </p>
+    
     
 <h3><a id="2024"></a>Talks in Fall 2024 (mostly Mondays 4:20 in M5024)</h3>
 
