--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </p>
 
     <p>
-        May , '25 (TBD, M5024), 
+        May 16, '25 (Friday, 4:30–5:30 pm, M5024), 
         <b>Hongwei Jia</b> (Tongji University), 
         <a onclick="toggle_visibility('25-3');"><i>Topological physics</i></a><br />
         <div id="25-3" class="toshow" style="display:none">
