--- a/grad/index.html
+++ b/grad/index.html
@@ -233,14 +233,21 @@
         <b> Pengxu Zhang </b>,
         <a onclick="toggle_visibility('42');">
         <i>  Introduction to Differential Cohomology: From Chern-Simons invariant to invertible field theory</i></a><br /> (Memorial Lecture on Jim Simons)
-        <div id="42" class="toshow" style="display:none">      
-        I will first review Chern's proof of generalized Gauss-Bonnet Theorem which is the precursor of Chern-Weil theory of characteristic classes. Then I will elaborate on the the 
+        <div id="42" class="toshow" style="display:none">    
+         <li>
+         I will first review Chern's proof of generalized Gauss-Bonnet Theorem which is the precursor of Chern-Weil theory of characteristic classes. Then I will elaborate on the the 
          original construction of Chern-Simons invariant in this framework. The second part focuses on the differential cohomology where the generalized Chern-Simons invariants live. 
          I will introduce the Cheeger-Simons' model on differential ordinary cohomology. Building on top of this, I will describe the differential K-theory using Chern-Simons form and 
          relating differential integration map in K-theory to (Atiyah-(Patodi)-Singer and family) index theorem. The bordism formula is emphasized throughout this section. If time permits, 
          I will illustrate the modern formalism of differential generalized cohomology and recent advances in its connection to invertible field theory and physics which has fertile 
          applications to algebraic topology. Some buzzwords in the last part: Anderson dual, bordism invariant, cobordism hypothesis, facorization homology and stable homology of 
          diffeomorphism groups.
+         </li>
+       
+
+          <li>
+              <a href="25spr/0425-Zhang.pdf" target="_blank">Slides</a>
+          </li>
         </div>
         
     </p>
@@ -258,14 +265,14 @@
     </p>
 
     <p>
-        May 16, '25
+        May 23, '25
         <b> Qingrui Qu</b>,
         <a onclick="toggle_visibility('44');">
         <i>  TBA </i></a><br />
     </p>
 
     <p>
-        May 23, '25
+        May 30, '25
         <b> Zhou Fang</b>,
         <a onclick="toggle_visibility('45');">
         <i>  TBA </i></a><br />
