--- a/acts/index.html
+++ b/acts/index.html
@@ -181,7 +181,7 @@
 
     <p>
         May 15, '25, 
-        <b>Haiyu Zhang</b>, 
+        <b>Zhiwang Yu</b>, 
         <a onclick="toggle_visibility('25-1');">
         <i>TBA</i></a><br />
         <div id="25-1" class="toshow" style="display:none">
@@ -191,9 +191,9 @@
 
     <p>
         May 22, '25, 
-        <b>Zhiwang Yu</b>, 
+        <b>Haiyu Zhang</b>, 
         <a onclick="toggle_visibility('25-2');">
-        <i>TBA</i></a><br />
+        <i>Methods of Algebraic Topology in the Study of Neural Network Architecture</i></a><br />
         <div id="25-2" class="toshow" style="display:none">
             
         </div>
