--- a/acts/index.html
+++ b/acts/index.html
@@ -189,7 +189,7 @@
             <li>Explore the meaning of convolutional kernels, the differences between spectrograms and ordinary images, and propose a new construction of convolutional kernels tailored for speech data.</li>
 
             <li>Discuss some existing challenges that require further improvement, as well as potential directions for future work.</li>
-            <li><a href="/acts/24/Feng-20240229.pdf" target="_blank">Slides</a></li>
+            <li><a href="/acts/25/Yu.pdf" target="_blank">Slides</a></li>
             
         </div>
     </p>
