--- a/acts/index.html
+++ b/acts/index.html
@@ -184,11 +184,11 @@
         <b>Zhiwang Yu</b>, 
         <a onclick="toggle_visibility('24-2');"><i>Methods of algebraic topology in the study of neural network architecture</i></a><br />
         <div id="25-1" class="toshow" style="display:none">
-            <li>Revisit the topological convolutional kernels of neural networks in <a href="https://www.jmlr.org/papers/v24/21-0073.html" target="_blank">Topological convolutional layers for deep learning</a>.</li>
+            <li>Revisit the topological convolutional kernels of neural networks for image data in <a href="https://www.jmlr.org/papers/v24/21-0073.html" target="_blank">Topological convolutional layers for deep learning</a>.</li>
             
-            <li>Explore the meaning of convolutional kernels, the differences between spectrograms and ordinary images, and propose a new construction of convolutional kernels tailored for speech data.</li>
+            <li>Propose a new construction of convolutional kernels for speech data.</li>
 
-            <li>Discuss some existing challenges that require further improvement, as well as potential directions for future work.</li>
+            <li>Discuss some existing challenges that require further improvement and potential directions for future work.</li>
             <li><a href="/acts/25/Yu.pdf" target="_blank">Slides</a></li>
             
         </div>
