--- a/acts/index.html
+++ b/acts/index.html
@@ -248,8 +248,8 @@
                         <span>© Copyright Philosophy 2025</span> 
                         <span>Site Template by <a href="https://colorlib.com/" target="_blank">Colorlib</a></span>
                         <span>
-                            Header image created by Haiyu Zhang on emergence of cycles in the space of weight vectors during a training process, which reflects the topology 
-                            of a convolutional neural network, after Carlsson and Gabrielsson 
+                            Header image created by Haiyu Zhang on emergence of cycles in the space of weight vectors during a training process, which reflects the evolving 
+                            topology of a convolutional neural network, after Carlsson and Gabrielsson 
                         </span>
                     </div>
 
