--- a/grad/index.html
+++ b/grad/index.html
@@ -270,10 +270,16 @@
         <a onclick="toggle_visibility('44');">
         <i>Homotopy theory via model categories and their underlying $\infty$-categories</i></a><br />
         <div id="44" class="toshow" style="display:none">
-            This talk introduces the foundational structures of model categories in modern homotopical algebra.  We begin by outlining the basic setup of model categories, including 
-            the notions of weak equivalences, fibrations, and cofibrations, and how they provide a homotopy theory.  We then explore Quillen adjunctions and Quillen equivalences, 
-            illustrating their role in establishing homotopical equivalences between different models.  Finally, we address the process of extracting the underlying $\infty$-category 
-            from a given model category, thereby connecting classical homotopical structures with the framework of $\infty$-categories.  
+            <ul>
+                <li>
+                    This talk introduces the foundational structures of model categories in modern homotopical algebra.  We begin by outlining the basic setup of model categories, 
+                    including the notions of weak equivalences, fibrations, and cofibrations, and how they provide a homotopy theory.  We then explore Quillen adjunctions and Quillen 
+                    equivalences, illustrating their role in establishing homotopical equivalences between different models.  Finally, we address the process of extracting the underlying 
+                    $\infty$-category from a given model category, thereby connecting classical homotopical structures with the framework of $\infty$-categories.  
+                </li>
+
+                <li><a href="25spr/0523-Fang.pdf" target="_blank">Slides</a></li>
+            </ul>            
         </div>
     </p>
 
