--- a/acts/index.html
+++ b/acts/index.html
@@ -222,7 +222,7 @@
     <p>
         May 29, '25, 
         <b>Zeyang Ding</b>, 
-        <a onclick="toggle_visibility('25-3');"><i>A Topic in the Combination of LLM and TDA</i></a><br />
+        <a onclick="toggle_visibility('25-3');"><i>A topic in the combination of LLM and TDA</i></a><br />
         <div id="25-3" class="toshow" style="display:none">
             <ul>
                 <li>
@@ -236,8 +236,8 @@
                 
                 <li><a href="/acts/25/0529-Ding.pdf" target="_blank">Slides</a></li>
                 <li>Other references: </li>
-                <a href="https://arxiv.org/abs/2211.17223" target="_blank">Topological Data Analysis for Speech Processing.</a></li> 
-                <a href="https://arxiv.org/abs/2201.00058" target="_blank">Representation Topology Divergence: A Method for Comparing Neural Network Representations.</a></li>
+                   <li><a href="https://arxiv.org/abs/2211.17223" target="_blank">Topological Data Analysis for Speech Processing.</a></li> 
+                   <li><a href="https://arxiv.org/abs/2201.00058" target="_blank">Representation Topology Divergence: A Method for Comparing Neural Network Representations.</a></li>
             </ul>            
             
         </div>
