--- a/acts/index.html
+++ b/acts/index.html
@@ -242,8 +242,14 @@
         <b>Pingyao Feng</b>, 
         <a onclick="toggle_visibility('25-4');">
         <i>Topological methods for signal variation detection</i></a><br />
-        <div id="25-4" class="toshow" style="display:none">
-            We will discuss different kinds of “variations” in signals, furthermore how topological methods can distinguish those variations, and possible future directions.  
+        <div id="25-4" class="toshow" style="display:none"> 
+            <ul>
+                <li>
+                    We will discuss different kinds of “variations” in signals, furthermore how topological methods can distinguish those variations, and possible future directions. 
+                </li>
+
+                <li><a href="/acts/25/0605-Feng.pdf" target="_blank">Slides</a></li>
+            </ul>
         </div>
     </p>
 
