--- a/grad/index.html
+++ b/grad/index.html
@@ -283,7 +283,24 @@
         </div>
     </p>
 
+  <p>
+        Jun 6, '25
+        <b>Yingming Zhang</b>,
+        <a onclick="toggle_visibility('45');">
+        <i>An introduction to Jacobi forms</i></a><br />
+        <div id="45" class="toshow" style="display:none">
+            <ul>
+                <li>
+                   Jacobi forms are natural generalization of Jacobi theta series,which play a crucial important role in quadratic forms and Hurwitz class Numbers. 
+                    This talk introduce the basic definitions and notions about Jacobi forms and relationship with modular forms of integral and half-integral weight 
+                    and Siegel modular forms such as Maass lifting and Saito-Kurokawa lifting.
+                </li>
 
+                <li><a href="25spr/0606-Zhang.pdf" target="_blank">Slides</a></li>
+            </ul>            
+        </div>
+    </p>
+    
 <h3><a id="2024"></a>Talks in Fall 2024 (mostly Mondays 4:20 in M5024)</h3>
 
     
