--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -148,22 +148,10 @@
                 This is an undergraduate student seminar on geometry and topology. <a href="GT-student-seminar.pdf"
                     target="_blank">Here</a> is a course description for you to get
                 an idea of how it runs and particularly for those of you who wish to register for credit.
-                <!--
-        The tentative plan for this semester is that we take a break, but check out the <a href="/acts" title="" target="_blank">Applied and Computational Topology 
-        Seminar</a> if you are interested.  
-        -->
                 If you would like to propose a topic in geometry and topology for now or the future, write to <a
                     href="mailto:zhuyf@sustech.edu.cn">Yifei Zhu</a>.
-                <!--
-        This semester, our main theme will be modular curves, with Diamond and Shurman's <a href="https://doi.org/10.1007/978-0-387-27226-9" target="_blank">A first course 
-        in modular forms</a> (from Chapter 6 on) as a main reference.  Other useful resources include Milne's <a href="https://www.jmilne.org/math/CourseNotes/mf.html" 
-        target="_blank">notes</a> as well as a recent introductory, motivating 
-        <a href="https://www.quantamagazine.org/behold-modular-forms-the-fifth-fundamental-operation-of-math-20230921/" target="_blank">article</a> on modular forms by 
-        Cepelewicz of Quanta Magazine.  There will also be two <a href="https://math.sustech.edu.cn/colloquium.html?lang=en" target="_blank">colloquiums</a> in a row on the 
-        topic in October.  Still, Chao Li's recent <a href="https://www.ams.org/journals/bull/2023-60-03/S0273-0979-2023-01786-2/" target="_blank">survey</a> is recommended.  
-        -->
             </p>
-
+<!--
             <p>
                 Our theme for Fall 2024 is the geometry and physics of
                 <a href="https://www.researchgate.net/figure/The-spectral-data-of-a-Higgs-bundle-ph-encodes-a-line-bundle-L-on-a-branched-cover-S-C_fig3_358261134"
@@ -187,8 +175,8 @@
 
 
             <h3><a id="T"></a>Talks</h3>
-
-            <!--
+-->
+<!--
     <p>
         MMM DD, 'YY, 
         <b>Speaker</b> (Affiliation if not SUSTech), 
@@ -197,246 +185,20 @@
         </a>
         <br />
         <div id="#" class="toshow" style="display:none">
-            Abstract, notes, slides, references, etc.  
+            <ul>
+                <li>Abstract</li>
+
+                <li><a href="/undergrad/25fal/MMDD-LastName.pdf" target="_blank">Notes/Slides</a></li>
+
+                <li>References</li>
+            </ul>
         </div>
     </p>
 -->
 
-            <p>
-                Sep 19, '24,
-                <b>Yifei Zhu</b>,
-                <a onclick="toggle_visibility('1');">
-                    <i>Organizational meeting / introduction: A partial, but motivated view of Higgs bundles</i>
-                </a>
-                <br />
-            <div id="1" class="toshow" style="display:none">
-                <ul>
-                    <li>
-                        Why do we care about them?
-                        <ul>
-                            <li>Vector bundles, parametrized objects, and moduli spaces: tangent bundle, line bundles
-                                over $S^1$, moduli of elliptic curves</li>
-
-                            <li>
-                                Motivation from physics (condensed matter and quantum materials): sensing and absorbing
-                                devices (<a href="https://youtu.be/DRS02SR4p8s" target="_blank">invisibility cloak</a>,
-                                <a href="https://youtu.be/0GaxfZTOW8M" target="_blank">anti-objects</a>), optical
-                                devices (holography,
-                                laser), materials with exceptional properties not found in nature at the macroscopic
-                                level realized by engineering and fine-tuning against
-                                degeneracy at the microscopic/quantum level
-                            </li>
-
-                            <li>
-                                Hamiltonian $\stackrel{\rm mathematically}{=}$ square matrix with prescribed symmetry
-                                (Hermitian, reason), eigenvalue (energy) and eigenvector
-                                (state), evolution of eigenstates (or rotation of eigenframe $\leadsto$ eigenbundle),
-                                energy bands
-                            </li>
-
-                            <li>
-                                Examples: Hermitian 2-band system (orthogonal half Möbius bands, classified by
-                                $\pi_1(S^1)\cong{\mathbb Z}$) and 3-band system (classified by
-                                $\pi_1\Big({\rm SO}(3)\big/\big({\rm O}(1)\times{\rm O}(1)\big)\Big)\cong Q=\{\pm1,\pm
-                                i,\pm j,\pm k\}$, see
-                                <a href="https://doi.org/10.1126/science.aau8740" target="_blank">Wu <i>et al.</i>,
-                                    <b>Science</b> 2019</a>), non-Hermitian 2-band system
-                                (non-Hermitian = Hermitian with respect to a non-Euclidean Riemannian metric form,
-                                reason(s); stratified space,
-                                <a href="https://yifeizhu.github.io/swallowtail/rotate.mp4" target="_blank">kissing half
-                                    Möbius bands</a>)
-                            </li>
-
-                            <li>
-                                Higgs bundle $\approx$ family of matrices:
-                                <a href="https://mp.weixin.qq.com/s?fallback_from_env=not_support&vid=wxv_3407860455564460033&__biz=MzIwMjk1OTc2MA==&mid=2247546160&idx=1&sn=0d2a70727d4d0face60fc336937197f3"
-                                    target="_blank">Peter Higgs</a>, Nigel Hitchin, Carlos Simpson
-                            </li>
-
-                            <li>
-                                Riemann–Hilbert correspondence (de Rham's theorem, the Poincaré lemma), Simpson
-                                correspondence
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        Some specific goals (or rather questions to keep in mind):
-                        <ul>
-                            <li>Classification of eigenbundles, up to homotopy: intersection homology and homotopy</li>
-
-                            <li>
-                                Metrics on the base space of a Higgs bundle and non-Hermiticity: hyperbolic metric (<a
-                                    href="https://doi.org/10.1038/s41586-019-1348-3" target="_blank">Kollár <i>et
-                                        al.</i>, <b>Nature</b> 2019</a>; Gothen, <a
-                                    href="https://www.cim.pt/magazines/bulletin/45/article/333/pdf"
-                                    target="_blank"><i>Geometry on surfaces and Higgs bundles</i></a>)
-                            </li>
-
-                            <li>
-                                Bulk–edge correspondence and (geometric) Langlands correspondence: roles played by Higgs
-                                bundles, explicit examples and calculations (Kienzle and
-                                Rayan, <a href="https://doi.org/10.1016/j.aim.2022.108664" target="_blank"><i>Hyperbolic
-                                        band theory through Higgs bundles</i></a>)
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li>Background materials and a plan: <a href="GT-student-seminar.pdf" target="_blank">course
-                            description for MA423</a></li>
-
-                    <li>
-                        Exercise: Compute the eigenbundle for the real matrices $$\begin{bmatrix} f_1 & f_2 \\ f_2 & -f_1 \end{bmatrix}$$ [<a href="24fal/2b-herm.pdf" target="_blank">a solution</a>] and find its relationship to the <i>Hopf bundle</i> $S^0\hookrightarrow S^1\to S^1$.  What 
-                        about the complex and quaternionic (and octonionic) cases?  Hint: See <a href="https://www.math.uni-tuebingen.de/de/forschung/maphy/personen/dr-barbara-roos/doc/theses/roos_semester_project.pdf" target="_blank">here</a>.  
-                    </li>
-                </ul>
-            </div>
-            </p>
-
-            <p>
-                Sep 26, '24,
-                <b>Pengxu Zhang</b>,
-                <a onclick="toggle_visibility('2');">
-                    <i>Overview of Higgs bundles through the lens of moduli spaces</i>
-                </a>
-                <br />
-            <div id="2" class="toshow" style="display:none">
-                <ol>
-                    <li>Hodge theory and Riemann–Hilbert correspondence</li>
-
-                    <li>Nonabelian Hodge correspondence and applications</li>
-                </ol>
-            <!--    
-                <li>Main reference: Laura P. Schaposnik, <a href="https://www.ams.org/journals/notices/202005/rnoti-p625.pdf" target="_blank"><i>Higgs bundles&mdash;recent applications</i></a></li>
-
-                <li><a href="24fal/0926-Zhang.pdf" target="_blank">Notes</a></li>
-            -->
-            </div>
-            </p>
-
-            <p>
-                Oct 10, '24,
-                <b>Weitong Wei</b>,
-                <a onclick="toggle_visibility('3');">
-                    <i>Background for ingredients in the definition of a Higgs bundle</i>
-                </a>
-                <br />
-            <div id="3" class="toshow" style="display:none">
-                <ol>
-                    <li>Complex manifold</li>
-
-                    <li>Holomorphic vector bundle</li>
-
-                    <li>Degree of a vector bundle</li>
-                </ol>
-            </div>
-            </p>
-
-            <p>
-                Oct 17, '24,
-                <b>No seminar</b>
-            </p>
-
-            <p>
-                Oct 24, '24,
-                <b>Weitong Wei</b>,
-                <a onclick="toggle_visibility('4');">
-                    <i>Background for ingredients in the definition of a Higgs bundle, II</i>
-                </a>
-                <br />
-            <div id="4" class="toshow" style="display:none">
-                <ol>
-                    <li>Degree of a vector bundle, cont'd</li>
-
-                    <li>The moduli space ${\mathscr N}_{n,d}^g$ of (stable) holomorphic vector bundles on a Riemann surface</li>
-
-                    <li>The moduli space ${\mathscr M}_{n,d}^g$ of (stable) Higgs bundles</li>
-                </ol>
-                <li><a href="24fal/1024-Wei.pdf" target="_blank">Notes</a></li>
-            </div>
-            </p>
-
-            <p>
-                Oct 31, '24,
-                <b>No seminar</b>
-            </p>
-
-            <p>
-                Nov 7, '24,
-                <b>Zhexi Zhang</b>,
-                <a onclick="toggle_visibility('5');">
-                    <i>Hyperbolic spaces and Higgs bundles</i>
-                </a>
-                <br />
-            <div id="5" class="toshow" style="display:none">
-                <li>Preliminaries on hyperbolic geometry</li>
-
-                <li>Surface group representations and the Toledo invariant</li>
-
-                <li>
-                    Main reference: Gothen, <a href="https://www.cim.pt/magazines/bulletin/45/article/333/pdf" 
-                    target="_blank"><i>Geometry on surfaces and Higgs bundles</i></a>
-                </li>
-            </div>
-            </p>
-
-            <p>
-                Nov 14, '24,
-                <b>Zhexi Zhang</b>,
-                <a href="24fal/1114-Zhang.pdf" target="_blank">
-                    <i>Hyperbolic spaces and Higgs bundles, II</i>
-                </a>
-            </p>
-
-            <p>
-                Nov 21, '24, <b>Zetu Chen</b>, <i>$p$-adic Riemann–Hilbert and Hodge correspondences, and rigid analytic geometry</i>
-            </p>
-
-            <p>
-                Nov 28, '24, <b>Zetu Chen</b>, <i>$p$-adic Riemann–Hilbert and Hodge correspondences, and rigid analytic geometry, II</i>
-            </p>
-
-            <p>
-                Dec 5, '24, <b>No seminar</b>
-            </p>
-
-            <p>
-                Dec 12, '24,
-                <b>Pengxu Zhang</b>,
-                <a onclick="toggle_visibility('6');">
-                    <i>Higgs bundles through the lens of moduli spaces, II</i>
-                </a>
-                <br />
-            <div id="6" class="toshow" style="display:none">
-                <li>
-                    I will first review the formulation of classical mechanics and introduce some basic concepts of 
-                    algebraic integrable systems which come out of classical mechanics. Then I will try to sketch the 
-                    last mentioned evidence for conjectural mirror symmetric $G$ and $G$-dual moduli spaces of Higgs 
-                    bundles at the end of the first part. For the second part of my talk, I will briefly introduce 
-                    some band theory and try to illustrate how Higgs bundle emerges in the study of band theory. At 
-                    the end, if time permits, I would like to draw some big pictures connecting previously mentioned 
-                    keywords such as mirror symmetry and geometric Langlands program.  
-                </li>
-
-                <li>
-                    Kienzle and Rayan, <a href="https://doi.org/10.1016/j.aim.2022.108664" target="_blank"><i>Hyperbolic 
-                    band theory through Higgs bundles</i></a>
-                </li>
-
-                <li>
-                    <a href="24fal/1212-Zhang.pdf" target="_blank">Notes</a> (incomplete and in progress)
-                </li>
-            </div>
-            </p>
-
-            <p>
-                Dec 16–20, '24,
-                <a href="https://huigaomath.github.io/events/2014_Dec_Handbook.pdf#page=4" target="_blank"><b>Arithmetic geometry conference talks</b></a> 
-                (some of them are related to what we've been thinking about this semester) 
-            </p>
-
 
             <h3><a id="P"></a>Previous Semesters</h3>
+            <li><a href="24fal" target="_blank">Fall 2024</a>, Geometry and physics of Higgs bundles</li>
             <li><a href="23fal" target="_blank">Fall 2023</a>, Modular curves</li>
             <li>
                 <a href="https://pxzsustech.notion.site/Knot-Theory-and-Low-Dimensional-Topology-Spring-2023-e950e35c261043a5a005a2c83c64be98" 
@@ -468,7 +230,7 @@
         <div class="row">
             <div class="col-full">
                 <div class="s-footer__copyright">
-                    <span>© Copyright Philosophy 2024</span>
+                    <span>© Copyright Philosophy 2025</span>
                     <span>Site template by <a href="https://colorlib.com/" target="_blank">Colorlib</a></span>
                     <span>
                         Cover illustration of a rank-2 Higgs bundle by Elliot Kienzle from
