--- a/undergrad/23fal/index.html
+++ b/undergrad/23fal/index.html
@@ -83,7 +83,7 @@
 
                     <ul class="header__nav">
                         <li><a href="/index.html" target="_blank">Home</a></li>
-                        <li><a href="/undergrad">Current</a></li>
+                        <li><a href="/undergrad" target="_blank">Current</a></li>
                         <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
                         <li><a href="/acts" title="" target="_blank">Appl. Comput. Topol. Seminar</a></li>
     
