--- a/undergrad/22fal/index.html
+++ b/undergrad/22fal/index.html
@@ -62,7 +62,7 @@
 
                     <ul class="header__nav">
                         <li><a href="/index.html" target="_blank">Home</a></li>
-                         <li><a href="/undergrad" title="">Current</a></li>
+                         <li><a href="/undergrad" title="" target="_blank">Current</a></li>
                         <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
                         
                     </ul> 
