--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -149,7 +149,7 @@
                     target="_blank">Here</a> is a course description for you to get
                 an idea of how it runs and particularly for those of you who wish to register for credit.
                 If you would like to propose a topic in geometry and topology for now or the future, write to <a
-                    href="mailto:zhuyf@sustech.edu.cn">Yifei Zhu</a>.  A possible topic for Fall 2025 is additive engineering of mathematics in 3 dimensions, 
+                    href="mailto:zhuyf@sustech.edu.cn">Yifei Zhu</a>.  A possible topic for Fall 2025 is geometric models and their additive engineering, 
                 such as <a href="https://www.ams.org/notices/202205/rnoti-p861.pdf" target="_blank">this</a> and 
                 <a href="https://www.ams.org/notices/202011/rnoti-p1692.pdf" target="_blank">this</a>.  
                 We have 3D printers available thanks to support by the Department of Mathematics and the National Center for Applied Mathematics Shenzhen.  
