--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -152,7 +152,7 @@
                     href="mailto:zhuyf@sustech.edu.cn">Yifei Zhu</a>.  A possible topic for Fall 2025 is geometric models and their additive engineering, 
                 such as <a href="https://www.ams.org/notices/202205/rnoti-p861.pdf" target="_blank">this</a> and 
                 <a href="https://www.ams.org/notices/202011/rnoti-p1692.pdf" target="_blank">this</a>.  
-                We have <a href="/undergrad/Sermoon–Bambu.jpeg" target="_blank">3D printers</a> available thanks to support by the 
+                We have <a href="/undergrad/Sermoon–Bambu.jpeg" target="_blank">3D printers</a> handy thanks to support by the 
                 Department of Mathematics and the National Center for Applied Mathematics Shenzhen.  
                 The actual theme of the seminar will depend on the interests of the participants.  
             </p>
