--- a/grad/index.html
+++ b/grad/index.html
@@ -305,8 +305,8 @@
         Jun 24, '25
         <b>Jiacheng Liang</b>,
         <a onclick="toggle_visibility('46');">
-        <i>Higher Algebra in t-Structured Tensor Triangulated ∞-Categories</i></a><br />(In collaboration with Xiangrui Shen)
-        <div id="45" class="toshow" style="display:none">
+        <i>Higher Algebra in t-Structured Tensor Triangulated $\infty$-Categories</i></a><br />(In collaboration with Xiangrui Shen)
+        <div id="46" class="toshow" style="display:none">
            
                
                   Many fundamental concepts from higher algebra - such as finitely presented, flat, and étale morphisms of $\mathbb{E}_\infty$-rings - admit natural generalizations to the setting of 
@@ -316,7 +316,7 @@
                     étale rigidity, and the universal property of the derived category. We demonstrate that projective rigidity holds in many familiar contexts:
                     - Spectra (with the Postnikov t-structure)
                     - Filtered and graded spectra
-                    - Genuine G-spectra for finite groups G
+                    - Genuine $G$-spectra for finite groups $G$
                     - Artin-Tate motivic spectra over perfect fields
 
                 A particularly illuminating example is the 1-dimensional framed cobordism category, which serves as a universal model for ttt-$\infty$-categories with projective rigidity. 
