--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <b>Jiacheng Liang</b> (Johns Hopkins University), 
         <a onclick="toggle_visibility('25-4');"><i>Higher algebra in $t$-structured tensor triangulated $\infty$-categories</i></a><br />
         <div id="25-4" class="toshow" style="display:none">
-            Many fundamental concepts from higher algebra–such as finitely presented, flat, and étale morphisms of ${\mathbb E}_n$-rings–admit natural generalizations to the 
+            Many fundamental concepts from higher algebra–such as finitely presented, flat, and étale morphisms of ${\mathbb E}_\infty$-rings–admit natural generalizations to the 
             setting of $t$-structured tensor triangulated $\infty$-categories (ttt-$\infty$-categories).  Under a natural structural condition we term <b>projective rigidity</b>, 
             we establish $\infty$-categorical analogues of key classical results, including Lazard's theorem, étale rigidity, and the universal property of the derived category.  
             We demonstrate that projective rigidity is satisfied in a broad range of examples, such as
@@ -215,10 +215,11 @@
 
                 <li>genuine $G$-spectra for finite groups $G$,</li>
 
-                <li>Artin–Tate motivic spectra over a perfect field.</li>
+                <li>Artin–Tate motivic spectra over perfect fields.</li>
             </ul>
-            A particularly illuminating example is the <b>1-dimensional framed cobordism category</b>, which serves as a "generator" for ttt-$\infty$-categories with projective 
-            rigidity.  This connection highlights the deep interplay between geometric topology and higher algebra in our framework.  This is joint work with Xiangrui Shen.
+            A particularly illuminating example is the <b>1-dimensional framed cobordism category</b>, which serves as a universal model for ttt-$\infty$-categories with 
+            projective rigidity.  This connection reveals deep relationships between geometric topology and higher algebra in our framework.  This is joint work with Xiangrui 
+            Shen.
         </div>
     </p>
 
