--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -177,10 +177,10 @@
                 tentatively scheduled on September 19. To facilitate
                 communication between participants, there is a QQ group: 811299006.
             </p>
-
+-->
 
             <h3><a id="T"></a>Talks</h3>
--->
+
 <!--
     <p>
         MMM DD, 'YY, 
@@ -201,7 +201,23 @@
     </p>
 -->
 
+    <p>
+        Sep 11, '25, 
+        <b>4:20 pm in College of Science M5024</b>, 
+        <a onclick="toggle_visibility('1');">
+            <i>Organizational meeting</i>
+        </a>
+        <br />
+        <div id="1" class="toshow" style="display:none">
+            <ul>
+                <li>Determine a topic/theme for Fall 2025, as well as time and location.</li>
 
+                <li>(Possibly) initial assignments of presentations for participants</li>
+            </ul>
+        </div>
+    </p>
+
+            
             <h3><a id="P"></a>Previous Semesters</h3>
             <li><a href="24fal" target="_blank">Fall 2024</a>, Geometry and physics of Higgs bundles</li>
             <li><a href="23fal" target="_blank">Fall 2023</a>, Modular curves</li>
