--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -212,7 +212,7 @@
             <ul>
                 <li>Determine a topic/theme for Fall 2025, as well as time and location.</li>
 
-                <li>(Possibly) initial assignments of presentations for participants</li>
+                <li>(Possibly) initial assignment of presentations for participants</li>
             </ul>
         </div>
     </p>
