--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -82,7 +82,7 @@
                     <ul class="header__nav">
                         <li><a href="/index.html" target="_blank">Home</a></li>
                         <li><a href="#A" target="_blank">About</a></li>
-                        <li><a href="#T" target="_blank">Talks</a></li>
+                        <li><a href="#S" target="_blank">Schedule</a></li>
                         <li><a href="#P">Previous Semesters</a></li>
                         <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
                         <li><a href="/acts" title="" target="_blank">Appl. Comput. Topol. Seminar</a></li>
@@ -143,43 +143,35 @@
 
 
             <h3><a id="A"></a>About</h3>
-
-            <p>
-                This is an undergraduate student seminar on geometry and topology. <a href="GT-student-seminar.pdf"
-                    target="_blank">Here</a> is a course description for you to get
-                an idea of how it runs and particularly for those of you who wish to register for credit.
-                If you would like to propose a topic in geometry and topology for now or the future, write to <a
-                    href="mailto:zhuyf@sustech.edu.cn">Yifei Zhu</a>.  A possible topic for Fall 2025 is geometric models and their additive engineering, 
-                such as <a href="https://www.ams.org/notices/202205/rnoti-p861.pdf" target="_blank">this</a> and 
-                <a href="https://www.ams.org/notices/202011/rnoti-p1692.pdf" target="_blank">this</a>.  
-                We have <a href="/undergrad/Sermoon–Bambu.jpeg" target="_blank">3D printers</a> handy thanks to support by the 
-                Department of Mathematics and the National Center for Applied Mathematics Shenzhen.  
-                The actual theme of the seminar will depend on the interests of the participants.  
-            </p>
 <!--
             <p>
-                Our theme for Fall 2024 is the geometry and physics of
-                <a href="https://www.researchgate.net/figure/The-spectral-data-of-a-Higgs-bundle-ph-encodes-a-line-bundle-L-on-a-branched-cover-S-C_fig3_358261134"
-                    target="_blank">Higgs bundles</a>. References include Laura Schaposnik's <a
-                    href="https://arxiv.org/abs/1907.09800" target="_blank">lecture notes</a> from a
-                summer school on <a href="https://bookstore.ams.org/view?ProductCode=PCMS/28" target="_blank">quantum
-                    field theory and manifold invariants</a> (this volume also
-                contains other topics of interest) and her <a
-                    href="https://www.ams.org/journals/notices/202005/rnoti-p625.pdf" target="_blank">expository
-                    article</a> for the
-                Notices of the AMS. See <a href="https://yifeizhu.github.io/Chongli.pdf" target="_blank">here</a> for
-                more motivations. Background materials can and should be
-                supplemented according to participant needs. If you're thinking about getting involved, let us know.
+                This is an undergraduate student seminar on geometry and topology.  <a href="GT-student-seminar.pdf" target="_blank">Here</a> is a course description for 
+                you to get an idea of how it runs and particularly for those of you who wish to register for credit.  If you would like to propose a topic in geometry and 
+                topology for now or the future, write to <a href="mailto:zhuyf@sustech.edu.cn">Yifei Zhu</a>.  A possible topic for Fall 2025 is geometric models and their 
+                additive engineering, such as <a href="https://www.ams.org/notices/202205/rnoti-p861.pdf" target="_blank">this</a> and <a 
+                href="https://www.ams.org/notices/202011/rnoti-p1692.pdf" target="_blank">this</a>.  We have <a href="/undergrad/Sermoon–Bambu.jpeg" target="_blank">3D 
+                printers</a> handy thanks to support by the Department of Mathematics and the National Center for Applied Mathematics Shenzhen.  The actual theme of the 
+                seminar will depend on the interests of the participants.  
+            </p>
+-->
+            <p>
+                This is an undergraduate student seminar on geometry and topology.  <a href="GT-student-seminar.pdf" target="_blank">Here</a> is a course description for 
+                you to get an idea of how it runs and particularly for those of you who wish to register for credit.  
             </p>
 
             <p>
-                We meet on <b>Thursdays 4:20–6:10 pm in Lecture Hall 3-309</b>. The first, organizational meeting is
-                tentatively scheduled on September 19. To facilitate
-                communication between participants, there is a QQ group: 811299006.
+                Our theme for Fall 2025 is <b>geometric models and their additive engineering</b>, such as <a href="https://www.ams.org/notices/202205/rnoti-p861.pdf" 
+                target="_blank">this</a> and <a href="https://www.ams.org/notices/202011/rnoti-p1692.pdf" target="_blank">this</a>.  We have <a 
+                href="/undergrad/Sermoon–Bambu.jpeg" target="_blank">3D printers</a> handy in Research Building 3 thanks to support by the Department of Mathematics and the 
+                National Center for Applied Mathematics Shenzhen.  
             </p>
--->
 
-            <h3><a id="T"></a>Talks</h3>
+            <p>
+                We meet on <b>Thursday/Friday in alternating weeks (see schedule below) 4:30–5:30 pm in College of Science M5024</b>.  
+            </p>
+
+
+            <h3><a id="S"></a>Schedule</h3>
 
 <!--
     <p>
