--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -162,7 +162,13 @@
     Our theme for Fall 2025 is <b>geometric models and their additive engineering</b>, such as <a href="https://www.ams.org/notices/202205/rnoti-p861.pdf" 
     target="_blank">this</a> and <a href="https://www.ams.org/notices/202011/rnoti-p1692.pdf" target="_blank">this</a>.  We have <a href="/undergrad/Sermoon–Bambu.jpeg" 
     target="_blank">3D printers</a> handy in Research Building 3 thanks to support by the Department of Mathematics and the National Center for Applied Mathematics 
-    Shenzhen.  
+    Shenzhen.  <a onclick="toggle_visibility('0');">Here</a> are some additional suggestions and references in case you don't have a favorite example in mind yet!  
+    <br />
+    <div id="0" class="toshow" style="display:none">
+        <ul>
+            <li></li>
+        </ul>
+    </div> 
 </p>
 
 <p>
