--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -166,7 +166,13 @@
     <br />
     <div id="0" class="toshow" style="display:none">
         <ul>
-            <li></li>
+            <li>Stereographic projection, as in the cover photo</li>
+
+            <li>
+                Projective spaces, projective plane, Boy's surface (an immersion of the real projective plane in $\mathbb R^3$): There is a famous sculpture of it at the 
+                Mathematical Research Institute of Oberwolfach, Germany.  J. Scott Carter's book <a href="https://webhomes.maths.ed.ac.uk/~v1ranick/papers/cartert.pdf" 
+                target="_blank"><i>How surfaces intersect in space: An introduction to topology</i></a> contains this example and many more.  
+            </li>
         </ul>
     </div> 
 </p>
